# dylibtree

./: .gitignore  Cargo.toml  LICENSE  README.md  release-build.sh
.github/workflows/: ci.yml  release.yml
src/: binary.rs  cli.rs  dyld_shared_cache.rs  extract.rs  main.rs  print.rs  runtime_root.rs  util.rs
