[package]
name = "dylibtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = "0.1.6"
clap = { version = "4.1.9", features = ["derive"] }
goblin = "0.6.1"
libc = "0.2.147"
libloading = "0.7.4"
regex = "1.8.4"
